Se hacen correciones en catalogo de materiales

--- a/src/templates/empresas.html
+++ b/src/templates/empresas.html
@@ -43,15 +43,15 @@
                     <div class="mb-3">
                         <label for="ESTATUS" class="form-label">Estado</label>
                         <select class="form-select" id="ESTATUS" name="ESTATUS">
-                            <option value="">Seleccionar</option>
+                            <option value="">SELECCIONA</option>
                             <option value="activo">Activo</option>
                             <option value="bloqueado">Bloqueado</option>
                         </select>
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn" data-bs-dismiss="modal">Cerrar</button>
-                    <button type="submit" class="btn botones">Filtrar</button>
+                    <button type="button" class="btn" data-bs-dismiss="modal">CERRAR</button>
+                    <button type="submit" class="btn botones">APLICAR</button>
                 </div>
             </form>
         </div>
