--- a/src/templates/edit_empresa.html
+++ b/src/templates/edit_empresa.html
@@ -103,7 +103,7 @@
                                         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                                             <label for="REGIMEN_FISCAL" class="form-label">REGIMEN FISCAL*</label>
                                             <select class="form-control" name="REGIMEN_FISCAL" id="REGIMEN_FISCAL" required>
-                                                <option value="" style="text-align: center;">------Selecciona------</option>
+                                                <option value="" style="text-align: center;">SELECCIONA</option>
                                         
                                                 <optgroup label="Personas morales">
                                                     <option value="601" {{ 'selected' if empresa.regimen_fiscal_id == 601 else '' }}>601 GENERAL DE LEY PERSONAS General de Ley Personas Morales</option>
@@ -495,7 +495,7 @@
 
                                             <button class="btn botones" type="button"
                                                 onclick="añadirCuentasBancarias()">
-                                                <i class="bi bi-window-plus"></i> Agregar una cuenta bancaría
+                                                <i class="bi bi-window-plus"></i> AGREGAR
                                         </div>
                                     </div>
 
@@ -708,11 +708,12 @@
         var cell2 = newRow.insertCell(1);
         var cell3 = newRow.insertCell(2); // Celda para el botón de eliminar
 
-        cell1.innerHTML =
-            '<input type="text"  class="form-control" name="noRegistro[]" required>' +
-            '<div class="invalid-feedback">' +
-            "Completa No de registro patronal" +
-            "</div>";
+        cell1.innerHTML =`
+            <input type="text"  placeholder="NÚMERO DE REGISTRO PATRONAL" class="form-control" name="noRegistro[]" required>
+            <div class="invalid-feedback">
+                 "Completa No de registro patronal"
+            </div>
+            `
         cell2.innerHTML =`
         <select id="selectEstados" class="form-control" name="estado[]" required>
           <option id="selectEstados" value="" style="text-align: center;">SELECIONA UN ESTADO</option>
@@ -778,7 +779,7 @@
         cell1.innerHTML = `
       <label class="form-label">SELECCIONA UN BANCO:</label>
       <select id="SELECT_BANCO" name="BANCO[]" class="form-control" style="text-align: center;" required>
-        <option value="">Selecciona un banco</option>
+        <option value="">SELECIONA UN BANCO</option>
       </select>
       <div class="invalid-feedback">
         SELECIONA UN BANCO
@@ -787,7 +788,7 @@
 
         cell2.innerHTML = `
       <label class="form-label">NO CUENTA</label>
-      <input type="text" class="form-control" name="NO_CUENTA[]" maxlength="21" oninput="formatearCLABE(this)" required>
+      <input type="text" class="form-control" placeholder="NUMERO DE CUENTA" name="NO_CUENTA[]" maxlength="21" oninput="formatearCLABE(this)" required>
       <div class="invalid-feedback">
       "Completa Estado de resgistro patronal"
       </div>
@@ -795,7 +796,7 @@
 
         cell3.innerHTML = `
       <label class="form-label">CLABE</label>
-      <input type="text" class="form-control" name="CLABE[]" maxlength="21" oninput="formatearCLABE(this)" required>
+      <input type="text" class="form-control" placeholder="CLABE" name="CLABE[]" maxlength="21" oninput="formatearCLABE(this)" required>
       <div class="invalid-feedback">
       "Completa  CLABE"
       </div>
