--- a/src/templates/altaPresupuestos.html
+++ b/src/templates/altaPresupuestos.html
@@ -2,7 +2,245 @@
 {% block title %}Presupuesto{% endblock %}
 
 {% block customCSS %}
+<style>
+    body {
+        background-color: #d9e3eb;
+    }
 
+    .table {
+        table-layout: fixed;
+        width: 100%;
+        border-collapse: collapse;
+        position: relative;
+        /* Para colocar los resizers */
+    }
+
+ 
+
+    th,
+    td {
+        padding: 10px;
+        text-align: center;
+        border: 1px solid #ddd;
+    }
+
+    /* Estilos para los resizers */
+    .resizer {
+        width: 5px;
+        cursor: col-resize;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        z-index: 1;
+        background-color: #ddd;
+        /* Color visible para el resizer */
+    }
+
+    .currency-input {
+        text-align: right;
+        width: 110px;
+        /* Alinea el texto a la derecha para valores monetarios */
+    }
+
+    .borderless {
+        border: none;
+        /* Elimina los bordes de los inputs */
+    }
+
+    tfoot tr {
+        background-color: #f8f9fa;
+        /* Color de fondo para el pie de tabla */
+    }
+
+    tfoot td {
+        padding: 10px;
+        /* Espaciado interno en las celdas del pie de tabla */
+    }
+
+    th,
+    td {
+        padding: 10px;
+        /* Espaciado interno para mejorar la legibilidad */
+        text-align: center;
+        /* Centra el texto de las celdas */
+        border: 1px solid #ddd;
+        /* Añade bordes a las celdas */
+    }
+
+    .table thead th {
+        position: sticky;
+        top: 0;
+        background-color: #0f2d3a;
+        color: #ffff;
+        font-size: 12px;
+        font-family: arial;
+        margin: 0px;
+        z-index: 2;
+    }
+
+    #DETALLE_PRESUPUESTO tfoot {
+        position: sticky;
+        bottom: 0;
+        background-color: white;
+        z-index: 2;
+
+    }
+
+    .form-label {
+        font-family: arial;
+        margin: 0px;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        display: block;
+
+    }
+
+    .presupuesto {
+        background-color: #0f2d3a;
+        color: #ffff;
+        font-family: arial;
+        margin: 0px;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        display: block;
+    }
+
+    .table-presupuesto  {
+        max-height: 500px;
+        overflow-y: auto;
+        overflow-x: auto;
+    }
+
+    .table-presupuesto_sub  {
+        max-height: 500px;
+        overflow-y: auto;
+        overflow-x: auto;
+    }
+
+    .table th,
+    .table td {
+        vertical-align: middle;
+        white-space: nowrap;
+        font-family: arial;
+
+    }
+
+    #heder-presupuestos th,
+    #heder-presupuestos td {
+        text-align: left;
+
+    }
+
+
+    .borderless {
+        border: none;
+        box-shadow: none;
+        outline: none;
+
+    }
+
+    .xnu {
+        font-family: arial;
+        margin: 0px;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        display: block;
+        font-size: 20px;
+        font-weight: normal;
+    }
+
+    .card-header {
+        font-size: 12px;
+        font-family: arial;
+        margin: 0px;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        display: block;
+
+    }
+
+    .table-borderless {
+    border-collapse: collapse;
+}
+
+.table-borderless th,
+.table-borderless td,
+.table-borderless thead th,
+.table-borderless tbody td,
+.table-borderless tfoot th {
+    border: none;
+}
+
+.table-borderless colgroup col {
+    border: none;
+}
+
+    .modal-header{
+        background-color: #0f2d3a; 
+        color: #fff;
+    }
+
+    .modal-title {
+        background-color: #0f2d3a; 
+        color: #fff;
+        font-size: 14px;
+        font-family: arial;
+        margin: 0px;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        display: block;
+
+    }
+
+
+    a.link {
+        color: #0f2d3a;
+        font-size: 12px;
+        font-family: arial;
+        margin: 0px;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        display: block;
+    }
+
+    .oculto {
+        display: none;
+    }
+
+    @media (min-width: 1200px) {
+    .modal-xl {
+        --bs-modal-width: 1600px;
+    }
+
+    
+}
+
+#suggestions {
+    position: absolute;
+    z-index: 1000; /* Asegurar que esté encima de otros elementos */
+    background: white;
+    border: 1px solid #ccc;
+    max-height: 50px; /* Limitar la altura si hay muchas sugerencias */
+    overflow-y: auto; /* Habilitar el scroll */
+  
+}
+
+#suggestions .list-group-item {
+    cursor: pointer;
+}
+
+#suggestions .list-group-item:hover {
+    background-color: #f0f0f0;
+}
+
+</style>
 {% endblock %}
 
 {% block titutlo %}PRESUPUESTO{% endblock %}
