--- a/src/templates/orden_compra_pdf.html
+++ b/src/templates/orden_compra_pdf.html
@@ -236,6 +236,7 @@
             </div>
             <div class="column">
                 <p><strong>OCC:</strong> {{ requisicion.occ or '' }}</p>
+                <p><strong>Número de Cotización:</strong> {{ numero_cotizacion or 'No disponible' }}</p>
                 <p><strong>Obra:</strong> {{ requisicion.nombre_proyecto or '' }}</p>
                 <p><strong>Req.:</strong> {{ requisicion.id or '' }}</p>
                 <p><strong>Concepto:</strong> {{ requisicion.concepto or '' }}</p>
